addition of single article page in frontend

--- a/frontend/templates/articles/article_list.htm
+++ b/frontend/templates/articles/article_list.htm
@@ -4,7 +4,7 @@
     <div class="card-body">
         <h2 class="card-title">{{.Title}}</h2>
         <p class="card-text">{{.Abstract}}</p>
-        <a href="#" class="btn btn-primary">Read More &rarr;</a>
+        <a href="/articles/id/{{.ID}}" class="btn btn-primary">Read More &rarr;</a>
     </div>
     <div class="card-footer text-muted">
         Published by
