--- a/frontend/templates/sidebar.htm
+++ b/frontend/templates/sidebar.htm
@@ -17,10 +17,10 @@
             <div class="col-lg-12">
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a href="#">Science</a>
+                        <a href="http://tagenal/articles/category/science">Science</a>
                     </li>
                     <li>
-                        <a href="#">Technology</a>
+                        <a href="http://tagenal/articles/category/technology">Technology</a>
                     </li>
                 </ul>
             </div>
