--- a/frontend/templates/articles/article.htm
+++ b/frontend/templates/articles/article.htm
@@ -7,23 +7,29 @@
         <div class="row">
             <div class="col-md-8">
                 <h1 class="my-4">
-                    article name
+                    {{.article.Title}}
                 </h1>
+                <h2>
+                    Authors 
+                </h2>
+                <p>
+                    {{.article.Authors}}
+                </p>
                 <h2>
                     Asbtract 
                 </h2>
                 <p>
-                    abstract
+                    {{.article.Abstract}}
                 </p>
                 <h2>
                     Text
                 </h2>
                 <p>
-                    text
+                    {{.article.Text}}
                 </p>
             </div>
             <div class="col-md-4">
-                {{template "sidebararticle"}}
+                {{template "sidebararticle" .article}}
             </div>
         </div>
     </div>
