Addition of the users web pages in frontend

--- a/frontend/templates/users/user.htm
+++ b/frontend/templates/users/user.htm
@@ -3,16 +3,18 @@
 {{template "head"}}
 <body>
     {{template "navbar"}}
-
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <h1 class="my-4">
-                    Welcome on Tagenal
+                    {{.user.Name}}
+                    <small>
+                        {{.user.Email}}
+                    </small>
                 </h1>
             </div>
             <div class="col-md-4">
-                {{template "sidebarhome"}}
+                {{template "sidebar_user" .user}}
             </div>
         </div>
     </div>
