--- a/frontend/templates/users/users_region.htm
+++ b/frontend/templates/users/users_region.htm
@@ -3,20 +3,21 @@
 {{template "head"}}
 <body>
     {{template "navbar"}}
-
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <h1 class="my-4">
-                    Welcome on Tagenal
+                    Users in region {{.region}}
                 </h1>
+                {{range $var := .users}}
+                    {{template "user_list" $var}}
+                {{end}}
             </div>
             <div class="col-md-4">
                 {{template "sidebarhome"}}
             </div>
         </div>
     </div>
-
     {{template "footer"}}
     {{template "bootstrapjs"}}
 </body>
