--- a/frontend/templates/sidebar.htm
+++ b/frontend/templates/sidebar.htm
@@ -28,6 +28,23 @@
     </div>
 </div>
 <div class="card my-4">
+    <h5 class="card-header">Regions</h5>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <a href="http://tagenal/users/region/Beijing">Beijing</a>
+                    </li>
+                    <li>
+                        <a href="http://tagenal/users/region/Hong Kong">Hong Kong</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card my-4">
     <h5 class="card-header">Side Widget</h5>
     <div class="card-body">
         Tagenal awesome
