--- a/frontend/templates/sidebar.htm
+++ b/frontend/templates/sidebar.htm
@@ -11,11 +11,17 @@
     </div>
 </div>
 <div class="card my-4">
-    <h5 class="card-header">Categories</h5>
+    <h5 class="card-header">Articles</h5>
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
                 <ul class="list-unstyled mb-0">
+                    <li>
+                        <a href="http://tagenal/articles/category/science">Stored in Beijing</a>
+                    </li>
+                    <li>
+                        <a href="http://tagenal/articles/category/technology">Stored in Hong Kong</a>
+                    </li>
                     <li>
                         <a href="http://tagenal/articles/category/science">Science</a>
                     </li>
@@ -28,7 +34,7 @@
     </div>
 </div>
 <div class="card my-4">
-    <h5 class="card-header">Regions</h5>
+    <h5 class="card-header">Users</h5>
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
