--- a/frontend/templates/sidebar.htm
+++ b/frontend/templates/sidebar.htm
@@ -17,10 +17,10 @@
             <div class="col-lg-12">
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a href="http://tagenal/articles/category/science">Stored in Beijing</a>
+                        <a href="http://tagenal/articles/region/beijing">Stored in Beijing</a>
                     </li>
                     <li>
-                        <a href="http://tagenal/articles/category/technology">Stored in Hong Kong</a>
+                        <a href="http://tagenal/articles/region/hong kong">Stored in Hong Kong</a>
                     </li>
                     <li>
                         <a href="http://tagenal/articles/category/science">Science</a>
