--- a/frontend/templates/articles/article.htm
+++ b/frontend/templates/articles/article.htm
@@ -2,19 +2,13 @@
 <html lang="en">
 {{template "head"}}
 <body>
-    {{template "navbar"}}
+    {{template "navbar" .}}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <h1 class="my-4">
                     {{.article.Title}}
                 </h1>
-                <h2>
-                    Authors 
-                </h2>
-                <p>
-                    {{.article.Authors}}
-                </p>
                 <h2>
                     Asbtract 
                 </h2>
