--- a/frontend/templates/articles/sidebar_article.htm
+++ b/frontend/templates/articles/sidebar_article.htm
@@ -1,14 +1,13 @@
 {{define "sidebararticle"}}
 <div class="card my-4">
-    <h5 class="card-header">Authors</h5>
+    <h5 class="card-header">Informations</h5>
     <div class="card-body">
+        <h6>Authors</h6>
         {{.Authors}}
-    </div>
-</div>
-<div class="card my-4">
-    <h5 class="card-header">Tags</h5>
-    <div class="card-body">
+        <h6>Tags</h6>
         {{.ArticleTags}}
+        <h6>Language</h6>
+        {{.Language}}
     </div>
 </div>
 <div class="card my-4">
@@ -26,12 +25,6 @@
                 </ul>
             </div>
         </div>
-    </div>
-</div>
-<div class="card my-4">
-    <h5 class="card-header">Language</h5>
-    <div class="card-body">
-        {{.Language}}
     </div>
 </div>
 {{end}}
