--- a/frontend/templates/sidebar.htm
+++ b/frontend/templates/sidebar.htm
@@ -15,13 +15,17 @@
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
+                <h6>By storage location</h6>
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a href="http://tagenal/articles/region/beijing">Stored in Beijing</a>
+                        <a href="http://tagenal/articles/region/beijing">Beijing</a>
                     </li>
                     <li>
-                        <a href="http://tagenal/articles/region/hong kong">Stored in Hong Kong</a>
+                        <a href="http://tagenal/articles/region/hong kong">Hong Kong</a>
                     </li>
+                </ul>
+                <h6 style="margin-top:1rem;">By Category</h6>
+                <ul class="list-unstyled mb-0">
                     <li>
                         <a href="http://tagenal/articles/category/science">Science</a>
                     </li>
@@ -48,12 +52,6 @@
                 </ul>
             </div>
         </div>
-    </div>
-</div>
-<div class="card my-4">
-    <h5 class="card-header">Side Widget</h5>
-    <div class="card-body">
-        Tagenal awesome
     </div>
 </div>
 {{end}}
