--- a/frontend/templates/users/user.htm
+++ b/frontend/templates/users/user.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 {{template "head"}}
 <body>
-    {{template "navbar"}}
+    {{template "navbar" .}}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
