Addition of a local mount volume with NFS and integration of files in frontend

--- a/frontend/templates/articles/article_list.htm
+++ b/frontend/templates/articles/article_list.htm
@@ -1,6 +1,6 @@
 {{define "article_list"}}
 <div class="card mb-4">
-    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+    <img class="card-img-top mx-auto d-block" src="{{.Image}}" alt="Card image cap" style="max-height: 120px; max-width: 120px;">
     <div class="card-body">
         <h2 class="card-title">{{.Title}}</h2>
         <p class="card-text">{{.Abstract}}</p>
