--- a/frontend/templates/articles/article.htm
+++ b/frontend/templates/articles/article.htm
@@ -18,9 +18,36 @@
                 <h2>
                     Text
                 </h2>
-                <p>
-                    {{.article.Text}}
-                </p>
+                <div class="text-wrap">
+                    <p class="text-justify">
+                        {{.text}}
+                    </p>
+                </div>
+                <h2>
+                    Media
+                </h2>
+                <h3>
+                    Photos
+                </h3>
+                <div class="row">
+                    {{range $img := .imgs}}
+                        <div class="col-md-4">
+                            <img src="{{$img}}" alt="image-{{$img}}" class="img-thumbnail img-fluid">
+                        </div>
+                    {{end}}
+                </div>
+                <h3>
+                    Videos
+                </h3>
+                <div class="row">
+                    {{range $vid := .vids}}
+                        <div class="col-md-4">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="{{$vid}}" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    {{end}}
+                </div>
             </div>
             <div class="col-md-4">
                 {{template "sidebararticle" .article}}
